syntax = "proto3";

package employee_service.requests.device.get_devices;

import "employee-service/models/device.proto";

option go_package = "github.com/nicodanke/gesty-api/shared/proto/employee-service/requests/device";

message GetDevicesRequest {
    optional int32 page = 1;
    optional int32 size = 2;
}

message GetDevicesResponse {
    repeated employee_service.models.device.Device devices= 1;
}
